--- a/js-cards.html
+++ b/js-cards.html
@@ -67,5 +67,13 @@
 "body": "quo et expedita modi cum officia vel magni\ndoloribus qui repudiandae\nvero nisi sit\nquos veniam quod sed accusamus veritatis error"
 }
 ]
+
+//for loop
+
+var i;
+for (i = 0; i < id.length; i++) {
+text += id[i] + "<br>";
+}
+
 </body>
 </html>
